# reddit-follow

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  posts.ini  pyproject.toml  requirements.txt
src/reddit_follow/: __init__.py  cli.py  last_runtime.py  match.py  reddit.py  slack.py
tests/: test_match.py
