[tool.poetry]
name = "reddit-follow"
version = "1.0.0"
description = "Follow Reddit posts in target subreddits"
authors = ["John Kim <johnjohnskim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^3.5.3"
requests = "^2.26.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
reddit-follow = "reddit_follow.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
